fixing match- modal spacing

--- a/capstone-project/ui/src/components/MatchModal/MatchModal.css
+++ b/capstone-project/ui/src/components/MatchModal/MatchModal.css
@@ -61,7 +61,7 @@ margin-top:1vh;
     flex-direction: column;
     align-items: center;
     height:80vh;
-    gap:4vh;
+    gap:2vh;
 }
 .match-modal-img{
 border-radius: 50%;
