--- a/capstone-project/ui/src/components/NavLinks/NavLinks.css
+++ b/capstone-project/ui/src/components/NavLinks/NavLinks.css
@@ -52,9 +52,7 @@
   box-shadow:2px 2px #86999e;
 
 }
-/* span:hover {
-    color: white
-  } */
+
 
 .logout-button{
     border: 1px solid transparent;
