--- a/capstone-project/ui/src/components/ProfilePage/ProfilePage.css
+++ b/capstone-project/ui/src/components/ProfilePage/ProfilePage.css
@@ -192,6 +192,11 @@ background-color: lightgrey;
     font-size: 2.5vh;
 }
 
+.update-btn:hover{
+    background-color:  rgb(112, 112, 112);
+ }
+
+    
 .profile-page .right-section{
     display:flex;
     flex-direction: column;
@@ -335,6 +340,7 @@ font-weight: 500;
         padding-right: 0px;
         font-size: 2.5vh;
     }
+
     
     .profile-page .right-section{
         display:flex;
